feat(application, db): formatted DB to 3NF, adapted ORM and API to changes - Introduced `city`, `street`, `building` tables and correlating models - Adapted API to work with Integer city representation (as cityId) instead of String - Refactor groupings to work with Integer